--- a/components/oci-transfer.yaml
+++ b/components/oci-transfer.yaml
@@ -14,7 +14,7 @@ spec:
     url: ghcr.io/sidhishruti22
   component: "github.com/ammar/que"
   interval: 10m0s
-  semver: "~v1.0.1"
+  semver: "v1.0.1"
 #   verify:
 #     - signature:
 #         name: alice
