--- a/components/oci-transfer.yaml
+++ b/components/oci-transfer.yaml
@@ -6,11 +6,11 @@ metadata:
 spec:
   source:
     secretRef:
-      name: regcred
+      name: creds
     url: ghcr.io/mohammad-ammar14
   destination:
     secretRef:
-      name: regcred-2
+      name: creds-2
     url: ghcr.io/sidhishruti22
   component: github.com/ammar/que
   interval: 10m0s
