--- a/components/oci-transfer.yaml
+++ b/components/oci-transfer.yaml
@@ -15,11 +15,11 @@ spec:
   component: github.com/ammar/que
   interval: 10m0s
   semver: v1.0.1
-#   verify:
-#     - signature:
-#         name: alice
-#         key:
-#           name: alice-publickey
+  verify:
+    - signature:
+        name: alice
+        key:
+          name: alice-publickey
 status:
   latestVersion: v1.0.1
   replicatedVersion: v1.0.1
