--- a/components/oci-transfer.yaml
+++ b/components/oci-transfer.yaml
@@ -12,7 +12,7 @@ spec:
     secretRef:
       name: creds-2
     url: ghcr.io/sidhishruti22
-  component: github.com/ammar/que
+  component: github.com/acme/rollback-test
   interval: 10m0s
   semver: v1.0.1
   verify:
