--- a/components/componentversion.yaml
+++ b/components/componentversion.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ocm-system
 spec:
   interval: 10m0s
-  component: github.com/ammar/que
+  component: github.com/acme/rollback-test
   version:
     semver: v1.0.1
   repository:
