--- a/components/oci-transfer.yaml
+++ b/components/oci-transfer.yaml
@@ -6,20 +6,20 @@ metadata:
 spec:
   source:
     secretRef:
-      name: creds
+      name: regcred
     url: ghcr.io/mohammad-ammar14
   destination:
     secretRef:
-      name: creds-2
+      name: regcred-2
     url: ghcr.io/sidhishruti22
-  component: github.com/acme/rollback-test
+  component: github.com/ammar/que
   interval: 10m0s
-  semver: v1.0.1
+  semver: v1.0.0
   verify:
     - signature:
         name: alice
         key:
           name: alice-publickey
 status:
-  latestVersion: v1.0.1
-  replicatedVersion: v1.0.1
+  latestVersion: v1.0.0
+  replicatedVersion: v1.0.0
